--- a/index.html
+++ b/index.html
@@ -41,9 +41,6 @@
                         Badhan
                         <span class="text-primary">Saha</span>
                     </h1>
-                    <div class="subheading mb-5">
-                         <a href="#" id='hawk'>badhansaha@yahoo.com</a>                       
-                    </div>
                     <p class="lead mb-5">My main objective is to secure a position as a DevOps Engineer where I can utilize my skills and experience to develop and maintain scalable and reliable infrastructure, implement continuous integration and delivery, and ensure optimal system performance.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/badhansaha/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
@@ -60,35 +57,22 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Technical Staff</h3>
-                            <div class="subheading mb-3">GAOTek Inc. New YORK, USA</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Trainee Software Engineer, DevOps and Cloud</h3>
+                            <div class="subheading mb-3">BJIT Academy, Dhaka</div>
+                            <p>Assisted in the development and deployment of applications using DevOps tools and methodologies.</p>
+                            <p>Worked with development and operations teams to ensure proper integration and testing of code.</p>
+                            <p>Participated in Agile ceremonies and provided status updates on project progress<p>
+                            <p>Assisted with troubleshooting and issue resolution in production environments</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2021 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Binary Creation</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">Software Development Intern</h3>
+                            <div class="subheading mb-3">GAOTek Inc./div>
+                            <p>Contributed to the development of features and bug fixes for applications and Worked collaboratively with team members to ensure timely completion of project milestones</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
                     </div>
                 </div>
             </section>
@@ -100,10 +84,10 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">BRAC University, Dhaka</h3>
-                            <div class="subheading mb-3">Master of Engineering</div>
+                            <div class="subheading mb-3">Master of Science</div>
                             <div>Computer Science and Engineering</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2021 - 2022</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2023</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -111,14 +95,14 @@
                             <div class="subheading mb-3">Bachelor of Science</div>
                             <div>Computer Science and Engineering</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2016 - 2021</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Adamjee Cantonment College, Dhaka</h3>
                             <div class="subheading mb-3">Science</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2013 - 2015</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2015</span></div>
                     </div>
                 </div>
             </section>
