--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
                             <p>Participated in Agile ceremonies and provided status updates on project progress<p>
                             <p>Assisted with troubleshooting and issue resolution in production environments</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2023 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Development Intern</h3>
-                            <div class="subheading mb-3">GAOTek Inc./div>
+                            <div class="subheading mb-3">GAOTek Inc.</div>
                             <p>Contributed to the development of features and bug fixes for applications and Worked collaboratively with team members to ensure timely completion of project milestones</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2021 - 2022</span></div>
                     </div>
                 </div>
             </section>
@@ -100,7 +100,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Adamjee Cantonment College, Dhaka</h3>
-                            <div class="subheading mb-3">Science</div>
+                            <div class="subheading mb-3">Higher Secondary</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2015</span></div>
                     </div>
