--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                             <h3 class="mb-0">BRAC University, Dhaka</h3>
                             <div class="subheading mb-3">Master of Science</div>
                             <div>Computer Science and Engineering</div>
+                            <div>CGPA : 4.0</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2023</span></div>
                     </div>
@@ -94,6 +95,7 @@
                             <h3 class="mb-0">BRAC University, Dhaka</h3>
                             <div class="subheading mb-3">Bachelor of Science</div>
                             <div>Computer Science and Engineering</div>
+                            <div>CGPA : 3.7</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2021</span></div>
                     </div>
@@ -101,6 +103,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Adamjee Cantonment College, Dhaka</h3>
                             <div class="subheading mb-3">Higher Secondary</div>
+                            <div>Science</div>
+                            <div>GPA : 5.0</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2015</span></div>
                     </div>
